Move to JDK 17